# rid3

./: Cargo.toml  LICENSE  README.md  default_config.toml
docs/: configuration.md  tutorial.md
src/: args.rs  logger.rs  main.rs  render.rs  state.rs  util.rs
src/config/: mod.rs
src/configuration/: actions.rs  default_config.rs  general.rs  mod.rs  theme.rs
src/popups/: double_input.rs  help.rs  mod.rs  single_input.rs  template.rs
src/render/: files_render.rs  frames_render.rs  help_render.rs  logs.rs  logs_render.rs  main_render.rs  mod.rs  popup_render.rs
src/state/: files_state.rs  frame_data.rs  frames_state.rs  main_state.rs  mod.rs
