[package]
name = "rid3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.1"
tui = { version = "0.17", default-features = false, features = ["crossterm"] }
anyhow = "1.0.52"
id3 = "1.0.2"
tokio = { version = "1.17.0", features = ["rt-multi-thread", "macros", "sync", "time"] }
tui-logger = "0.7.1"
log = "0.4.16"
