[package]
name = "rid3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.2"
tui = { version = "0.18", default-features = false, features = ["crossterm", "serde"] }
anyhow = "1.0.58"
id3 = "1.2"
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros", "sync", "time"] }
tui-logger = "0.8"
log = "0.4.17"
toml = "0.5.9"
colorsys = "0.6.6"
serde = "1.0.139"
home = "0.5.3"
clap = "3.2.16"
