[package]
name = "rid3"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.23.2"
tui = { version = "0.18", default-features = false, features = ["crossterm", "serde"] }
anyhow = "1.0.58"
id3 = "1.2"
tokio = { version = "1.19.2", features = ["rt-multi-thread", "macros", "sync", "time"] }
log = "0.4.17"
toml = "0.5.9"
serde = "1.0.139"
clap = "3.2.16"
colorsys = "0.6.6"
config = { version = "0.13.3", default-features = false, features = ["toml"] }
notify = { version = "5.0.0", default-features = false, features = ["macos_kqueue"] }
futures = "0.3.25"
directories = "4.0.1"
